# preprocess_python2cpp

./: .editorconfig  .gitignore  ATOMIC_PERFORMANCE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PERFORMANCE_REPORT.md  README.md  STRUCTURE.md  analyze_functions.py  atomic_test_results.txt  pyproject.toml  requirements.txt  tasks.md  test_atomic_functions.py
.github/workflows/: ci.yml
config/data/: test_image.ppm
config/implementations/: img.yaml
config/mappings/: learned.yaml  librosa.yaml  numpy.yaml  opencv.yaml  pil.yaml
config/schema/: mappings.yaml
examples/: pipeline_demo.py  pipeline_demo_simple.py
examples/atomic/: numpy_funcs.py  opencv_funcs.py  type_funcs.py
examples/utils/: generate_test_data.py
examples/vision/: advanced_preprocess.py  image_preprocessing.py  mnist_inference.py  simple_load.py  test_llm.py  test_unmapped.py
src/cli/: main.py
src/core/analysis/: dependencies.py  inferencer.py  parser.py  separator.py  tracer.py
src/core/generation/: filters.py  generator.py  llm_provider.py  template.py
src/core/mapping/: core.py  database.py  validator.py
src/core/validation/: comparator.py  executor.py
src/scripts/: clean.sh  setup.sh
src/templates/cmake/: cmakelists.txt.j2  pipeline_cmakelists.txt.j2
src/templates/cpp/: base.cpp.j2  component.cpp.j2  component.h.j2  inference_stub.cpp.j2  inference_stub.h.j2  multi.cpp.j2  pipeline_main.cpp.j2
src/templates/headers/: image.h.j2  img_common.h.j2  validator.h.j2
tests/: test_pipeline.py
tests/benchmarks/: runner.py
tests/cpp/: test_full_pipeline  test_full_pipeline.cpp  test_jpeg_resize.cpp  test_resize_simple  test_resize_simple.cpp
tests/unit/: test_builder.py  test_mapping_database.py  test_validation.py
